--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans|Staatliches" rel="stylesheet">
-<script src="//use.edgefonts.net/seaweed-script.js"></script>
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Staatliches" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+<script src="//use.edgefonts.net/seaweed-script.js"></script>
 
 
     <!--
